[project]
name = "enkan"
description = "A not-so-simple slideshow application"
version = "2.0.0-rc7"
authors = [
    { name = "John Sullivan", email = "benzo8@gmail.com" },
]
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.5",
    "pillow>=11.3.0",
    "python-vlc>=3.0.21203",
    "tqdm>=4.67.1",
]

[build-system]
requires = [
    "setuptools>=68.0.0",
    "wheel>=0.40.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["enkan*"]
exclude = ["enkan.tests*", "enkan.*.scratch*"]

[project.scripts]
enkan = "enkan.__main__:main"
